# upbit-trader

./: .env.example  .gitignore  GUIDE.md  README.md  pyproject.toml
scripts/: backup_db.sh  deploy.sh
src/: main.py
src/api/: auth.py  upbit_client.py  upbit_websocket.py
src/backtest/: engine.py  report.py
src/config/: risk.yaml  settings.py  strategies.yaml
src/core/: trading_engine.py
src/data/: collector.py  database.py  models.py
src/execution/: __init__.py  backtest_executor.py  base.py  live_executor.py  order_manager.py  position_tracker.py
src/indicators/: __init__.py  technical.py
src/monitoring/: logger.py  reporter.py
src/notification/: command_handler.py  telegram_bot.py
src/risk/: __init__.py  base.py  engine.py
src/risk/rules/: __init__.py  consecutive_loss.py  daily_loss_limit.py  mdd_circuit_breaker.py  position_size.py
src/strategy/: __init__.py  base.py  intraday_momentum_breakout.py  macd_momentum.py  registry.py  rsi_bollinger.py  trend_filtered_breakout.py  volatility_breakout.py
systemd/: upbit-trader.service
tests/: conftest.py  test_api.py  test_backtest.py  test_database.py  test_execution.py  test_hourly_briefing.py  test_imb_strategy.py  test_indicators.py  test_monitoring.py  test_order.py  test_risk.py  test_strategies.py  test_trading_engine_sell.py
